Fix sidebar responsive gap (#1092)

--- a/frontend/components/side_panels/SecondarySidePanelContainer/_styles.scss
+++ b/frontend/components/side_panels/SecondarySidePanelContainer/_styles.scss
@@ -14,6 +14,6 @@
   padding-top: $pad-base;
 
   @include breakpoint(smalldesk) {
-    width: 300px;
+    width: $sidepanel-tablet-width;
   }
 }
