--- a/frontend/styles/var/_global.scss
+++ b/frontend/styles/var/_global.scss
@@ -4,3 +4,4 @@ $nav-width: 240px;
 $nav-tablet-width: 55px;
 $base-font-size: 16;
 $sidepanel-width: 320px;
+$sidepanel-tablet-width: 300px;
